Implemented CallerIDPage and added a GenericComponents dart file

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ flutter:
     - assets/Calendar_MoodLogBG.JPG
     - assets/AccioBG.JPG
     - assets/AccioIconClearBG.PNG
+    - assets/testPic.jpg
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
