Implemented interactive Water Ripple Mode

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,6 +86,7 @@ flutter:
     - assets/sounds/KawaRingtone.mp3
     - assets/sounds/nightRingtone.mp3
     - assets/sounds/SoftMelody.mp3
+    - assets/WaterRipplesBG.JPG
 
 
 
