--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   url_launcher: ^6.0.20
   audioplayers: ^6.1.0
   marquee: ^2.2.3
+  vector_math: ^2.1.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -87,6 +88,8 @@ flutter:
     - assets/sounds/nightRingtone.mp3
     - assets/sounds/SoftMelody.mp3
     - assets/WaterRipplesBG.JPG
+    - assets/WaterTrailsBG.JPG
+    - assets/sand.JPG
 
 
 
