--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  # Add calendar to be used in the calendar page
+  table_calendar: ^3.0.0
 
 dev_dependencies:
   flutter_test:
