added the setup for self-care reminders

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   # Add calendar to be used in the calendar page
   table_calendar: ^3.0.0
   flutter_colorpicker: ^1.0.3
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
