--- a/android/app/src/debug/AndroidManifest.xml
+++ b/android/app/src/debug/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <!--Activity tag added to force app to always remain in portraid mode
     and disable rotation: Android specific-->
-    <activity>
+    <!-- <activity>
     android:screenOrientation="portrait"
-    </activity>
+    </activity> -->
 </manifest>
