added the popIts implementation

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -93,6 +93,7 @@ flutter:
     - assets/sounds/SoftMelody.mp3
     - assets/WaterRipplesBG.JPG
     - assets/WaterTrailsBG.JPG
+    - assets/sounds/pop.mp3
 
 
 
