Initial Notification Setup

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   table_calendar: ^3.0.0
   flutter_colorpicker: ^1.0.3
   intl: ^0.17.0
+  flutter_local_notifications: ^18.0.1
+  flutter_timezone: ^3.0.1
 
 dev_dependencies:
   flutter_test:
