--- a/android/build.gradle
+++ b/android/build.gradle
@@ -30,3 +30,7 @@ subprojects {
 tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
+
+dependencies {
+    classpath 'com.google.gms:google-services:4.3.15' // Use the latest version
+}
