--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,9 +41,11 @@ dependencies:
   table_calendar: ^3.0.0
   flutter_colorpicker: ^1.0.3
   intl: ^0.17.0
+  firebase_auth: ^5.3.3
+  firebase_core: ^3.8.0
+  http: ^1.0.0 # For making API requests to your backend
   flutter_local_notifications: ^18.0.1
   flutter_timezone: ^3.0.1
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
