Completed user login and username change features

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,8 +46,9 @@ dependencies:
   http: ^1.0.0 # For making API requests to your backend
   flutter_local_notifications: ^18.0.1
   flutter_timezone: ^3.0.1
+  shared_preferences: ^2.3.3
+  jwt_decoder: ^2.0.1
   connectivity_plus: ^4.0.0
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
