implemented profile pic selection

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -103,6 +103,12 @@ flutter:
     - assets/WaterTrailsBG.JPG
     - assets/sounds/pop.mp3
     - assets/AccioAnxietyManager.png
+    - assets/astronaut.jpg
+    - assets/car.jpg
+    - assets/cat.jpg
+    - assets/earth.jpg
+    - assets/moon.jpg
+    - assets/puppy.jpg
 
 
 
